# FfmpegDemo

./: gradle.properties
app/: CMakeLists.txt  build.gradle
app/libs/include/libyuv/: libyuv.h
app/src/androidTest/java/com/example/wangxi/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_example_wangxi_ffmpegdemo_VideoUtils.h  native-lib.cpp  player.cpp  queue.h
app/src/main/java/com/example/wangxi/ffmpegdemo/: MainActivity.java  PlayerActivity.java  VideoUtils.java  VideoView.java
app/src/main/res/layout/: activity_main.xml  activity_player.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/wangxi/ffmpegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
